@@ -1,3 +1,13 @@
+21/April/2020 - Version 4:
+ - Created function to read stored login details
+ - Created funtciton to delete login details
+ - Created function for user to restart the program(currently windows only)
+ - Created function for user to exit the program on main menu
+ - Automatically changes console title to a set name in the code (currently windows only)
+ - More file integrity detection
+ - Minor changes to strings for information towards users
+ - 
+
 21/April/2020 - Version 3:
 
  - Made the storing data function ready to work
